--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,28 @@
-/* You can add global styles to this file, and also import other style files */
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
+@import 'https://fonts.googleapis.com/css?family=Roboto';
+
+html,
+body,
+.container{
+    height: 100%;
+    margin: 0;
+    font-family: Roboto;
+}
+
+.sidenav{
+    background: #212121;
+    margin-right: 5px;
+    color: #fafafa;
+    box-shadow: 6px 0px 6px rgba(0,0,0,0.24);
+}
+
+.content{
+    margin: 4px;
+}
+
+.toolbar{
+    box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2), 0px 6px 10px 0px rgba(0,0,0,0.14), 0px 1px 18px 0px rgba(0,0,0,0.12);
+}
+md-icon{
+    cursor: pointer;
+}
